[package]
name = "braiinspool"
version = "0.2.0"
edition = "2024"
description = "Braiins Pool API"
authors = ["Yuki Kishimoto <yukikishimoto@protonmail.com>"]
homepage = "https://github.com/shadowylab/braiinspool"
repository = "https://github.com/shadowylab/braiinspool.git"
license = "MIT"
readme = "README.md"
rust-version = "1.85.0"
keywords = ["bitcoin", "braiins", "slushpool", "mining"]

[features]
# Default features
default = ["rustls"]
# Enable rust TLS
rustls = ["reqwest/rustls-tls"]
# Enable natile TLS (openssl)
nativetls = ["reqwest/native-tls"]
# Enable socks proxy
socks = ["reqwest/socks"]

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
url = "2.5"

[dev-dependencies]
serde_json = "1.0"
tokio = { version =  "1", features = ["full"] }
